--- a/index.html
+++ b/index.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Chess Game Web</title>
-  </head>
+    <link rel="stylesheet" href="./css/main.css" />
+</head>
 
-  <body></body>
+<body>
+    <div class="gamearaen">
+        <div class="chessboard" id="chessboard"></div>
+    </div>
+</body>
+<script src="javascript/main.js"></script>
+
 </html>
